--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -29,7 +29,7 @@
                 console.error("Erro ao atualizar preços:", e);
             }
         }
-        setInterval(updatePrices, 60000); // a cada minuto
+        setInterval(updatePrices, 60000);
     </script>
 </body>
 </html>
